# tiny-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: ICamera.h  IModel.h  IRenderer.h  IShader.h  LineRenderer.h  LineShader.h  ObjModel.h  Renderer.h  RendererShader.h  SimpleCamera.h  tgaimage.h
src/: CMakeLists.txt  line-drawing.cpp  line-drawing.md  line-renderer.cpp  perspective.md  renderer.cpp  tgaimage.cpp  tiny-renderer.md  triangle-drawing.cpp  triangle-drawing.md
